resources-ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: repo
    app.kubernetes.io/component: repo
    app.kubernetes.io/instance: repo
  name: repo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: repo
  type: ClusterIP
